task2 re-completed: sdram NOT tested

--- a/source/task2/makefile
+++ b/source/task2/makefile
@@ -53,3 +53,6 @@ niosII_jtag_uart.elf: $(OBJS)
 CLEAN: 
 	$(RM) niosII_jtag_uart.srec niosII_jtag_uart.elf $(OBJS)
 
+compile: COMPILE
+clean: CLEAN
+
